# vault-net

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: publish.yml
.opencode/skills/python-code-style/: SKILL.md
.opencode/skills/python-design-patterns/: SKILL.md
docs/: index.md
src/link_tracer/: __init__.py  __main__.py  api.py  cli.py  graph.py  logging.py  models.py  note_graph.py  resolve_links.py  resolve_vault_links.py  scan.py  transforms.py  utils.py  vault_graph.py
src/vault_net/: __init__.py  __main__.py  cli.py  consts.py  models.py  note_graph.py  scan.py  transforms.py  utils.py  vault_digraph.py  vault_edge_list.py  vault_graph.py  views.py
src/vault_net/application/: __init__.py  api.py
src/vault_net/application/use_cases/: __init__.py  build_full_graph.py  build_neighborhood_graph.py  create_note.py  delete_note.py  index_vault.py  scan_vault.py  show_note.py  trace_note_links.py
src/vault_net/domain/: __init__.py  models.py  protocols.py
src/vault_net/domain/services/: slug_service.py  vault_registry.py
src/vault_net/infrastructure/graph/: networkx_vault_digraph.py
src/vault_net/infrastructure/scanner/: matterify_scanner.py
src/vault_net/interface/cli/: main.py
src/vault_net/interface/formatters/: views.py
tests/: __init__.py  conftest.py  fixtures.py  test_api.py  test_cli.py  test_core.py  test_graph.py  test_integration.py  test_note_graph.py  test_resolve_links.py  test_resolve_vault_links.py  test_scan.py  test_transforms.py  test_utils.py  test_vault_digraph.py  test_vault_edge_list.py  test_vault_graph.py  test_views.py
tests/application/use_cases/: test_create_note.py  test_delete_note.py  test_show_note.py  test_trace_note_links.py
tests/domain/services/: test_registry.py  test_slug.py
tests/infrastructure/graph/: test_networkx_graph_builder.py
tests/interface/: test_cli.py
tests/interface/formatters/: test_views.py
